--- a/homework/Day_001_homework_Ian.ipynb
+++ b/homework/Day_001_homework_Ian.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "【日期時間】2021/04/18 00:26:00\n",
-      "【工作目錄】/Users/sky/Documents/GitHub/ML100Days/howework\n",
+      "【日期時間】2021/05/21 10:05:33\n",
+      "【工作目錄】/Users/sky/Documents/GitHub/ML100Days/homework\n",
       "【主機名稱】Skyde-MacBook-Air.local (127.0.0.1)\n",
       "【Python】3.8.5\n"
      ]
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -66,23 +66,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting np\n",
-      "  Downloading np-1.0.2.tar.gz (7.4 kB)\n",
-      "Building wheels for collected packages: np\n",
-      "  Building wheel for np (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for np: filename=np-1.0.2-py3-none-any.whl size=13651 sha256=192522afeba11acfb6c235ef59629017ea2a79d4eac7c612fabfe4c29043f001\n",
-      "  Stored in directory: /Users/sky/Library/Caches/pip/wheels/44/c8/fa/6341ec15fc1b7f1d7813744425e23817719133e2e6d2da01c9\n",
-      "Successfully built np\n",
-      "Installing collected packages: np\n",
-      "Successfully installed np-1.0.2\n"
+      "zsh:1: command not found: pip\r\n"
      ]
     }
    ],
@@ -92,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -504,8 +494,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
+   "execution_count": 104,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -518,6 +512,27 @@
    "source": [
     "ed_list3 = np.arange(0,21,step = 3)\n",
     "print(ed_list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np1 = np.array([1, 2, 3])\n",
+    "print(np1)\n",
+    "np2 = np.array([3, 4, 5])\n",
+    "print(np2)"
    ]
   }
  ],
