--- a/homework/Day_002_homework_Ian.ipynb
+++ b/homework/Day_002_homework_Ian.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "【日期時間】2021/05/21 11:08:15\n",
+      "【日期時間】2021/05/21 13:22:24\n",
       "【工作目錄】/Users/sky/Documents/GitHub/ML100Days/作業解答\n",
       "【主機名稱】Skyde-MacBook-Air.local (127.0.0.1)\n",
       "【Python】3.8.5\n"
@@ -38,6 +38,7 @@
     "import os, time, socket\n",
     "\n",
     "print(\"【日期時間】{}\".format(time.strftime(\"%Y/%m/%d %H:%M:%S\")))\n",
+    "os.chdir(\"/Users/sky/Documents/GitHub/ML100Days/作業解答\")\n",
     "print(\"【工作目錄】{}\".format(os.getcwd()))\n",
     "print(\"【主機名稱】{} ({})\".format(socket.gethostname(),socket.gethostbyname(socket.gethostname())))\n",
     "print(\"【Python】{}\".format(python_version()))\n",
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -123,22 +124,114 @@
    ],
    "source": [
     "print('type(a): ', type(a)) #返回陣列型態\n",
-    "print('a.dtype: ', a.dtype) #返回元素型態範圍"
+    "print('a.dtype: ', a.dtype) #返回元素型態範圍\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "ndarray.dtype： 陣列中的資料型態\n",
+    "ndarray.itemsize： 陣列中每個元素佔用的空間\n",
+    "''' \n",
+    "\n",
+    "print(is_dtype(a, 'int')) \n",
+    "print(is_dtype(a, 'int64')) "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_dtype(a, t):\n",
+    "    return a.dtype is t       # is t 為強比較，故僅側是三為true\n",
+    "# 測試一\n",
+    "print(is_dtype(a, 'int')) \n",
+    "# 測試二\n",
+    "print(is_dtype(a, np.int))    #非整數型態\n",
+    "\n",
+    "# 測試三\n",
+    "print(is_dtype(a, np.dtype('int')))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_dtype(a, t):\n",
+    "    return type(a) == np.dtype(t)\n",
+    "# 測試一\n",
+    "print(is_dtype(a, 'int')) \n",
+    "# 測試二\n",
+    "print(is_dtype(a, np.int)) \n",
+    "\n",
+    "# 測試三\n",
+    "print(is_dtype(a, np.dtype('int')))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_dtype(a, t):\n",
+    "    return type(a) is np.dtype(t)\n",
+    "# 測試一\n",
+    "print(is_dtype(a, 'int')) \n",
+    "# 測試二\n",
+    "print(is_dtype(a, np.int)) \n",
+    "\n",
+    "# 測試三\n",
+    "print(is_dtype(a, np.dtype('int')))"
+   ]
   }
  ],
  "metadata": {
