--- a/homework/Day_001_homework_Ian.ipynb
+++ b/homework/Day_001_homework_Ian.ipynb
@@ -49,7 +49,7 @@
     "print(\"【主機名稱】{} ({})\".format(socket.gethostname(),socket.gethostbyname(socket.gethostname())))\n",
     "print(\"【Python】{}\".format(python_version()))\n",
     "\n",
-    "%autosave 120"
+    "#%autosave 120"
    ]
   },
   {
@@ -552,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
